--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
   },
   "dependencies": {
     "express": "^4.17.1"
-  }
+  },
+  "devDependencies": {
+       "mocha": "10.2.0",
+       "supertest": "6.3.3"
+}
 
 }
